# battery-monitor-app

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  main.cpp
include/: battery.h  notif.h
